--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "gatsby": "^2.19.45",
-    "gatsby-theme-blog": "^1.3.30",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-hls": "0.0.8",
+    "react-player": "^1.15.2"
   }
 }
